--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       name="Sushant's Portfolio"
       content="Portfolio content"
     />
-    <meta property="og:title" content="Ashutosh Hathidara Portfolio" />
+    <meta property="og:title" content="Sushant's Portfolio" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://SushantSriv.github.io/" />
     <meta name="description" content="Sushant's Personal Portfolio Website" property="og:description">
